macros/tests/unhappy/js_name_param_on_self.test.stderr
error: `param_description` cannot be used on receiver parameters (self, &self, &mut self)
  --> tests/unhappy/js_name_param_on_self.test.rs:10:9
   |
10 |         #[wasm_export(js_name = "selfParam")]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
